Modify Pages: quiz.html; New assets: quiz logo

--- a/checklist/checklist.html
+++ b/checklist/checklist.html
@@ -19,7 +19,9 @@
     <header>
         <div class="row align-items-center">
             <div class="col-4">
-                <a href="/" style="font-size: 18px;">Página Inicial</a>
+              <a href="/" style="font-size: 18px;">
+                <img class="img-fluid" src="/img/home-svgrepo-com.svg" style="height: 32px;">Página Inicial
+              </a>
             </div>
             <div class="col-4">
               <img class="img-fluid" src="/img/logo-preta.png" alt="Checklist 10 Minutos" style="max-height: 60px;">
