--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <a href="/quiz" class="btn btn-primary">Desafiar</a>
                 </div>
                 <div class="col-8">
-                    <img src="/img/placeholder.webp" class="img-fluid" alt="Checklist">
+                    <img src="/img/preview2.jpg" class="img-fluid" alt="Checklist">
                 </div>
             </div>
         </main>
