--- a/quiz/quiz.html
+++ b/quiz/quiz.html
@@ -32,12 +32,14 @@
         <main class="grid">
             <div id="game-row" class="row">
                 <section id="section" class="col-10 text-center">
-                    <div class="bottom-line align-items-center" id="questionBlock"></div>
+                    <div class="bottom-line align-items-center" id="questionBlock">
+                        Bem vindo ao Quiz Contra a Dengue, aqui você poderá testar seus conhecimentos a respeito do mosquito Aedes Aegypti e sobre o Controle Vetorial. Clique no botão azul para iniciar o quiz.
+                    </div>
                     <div class="d-flex justify-content-center">
                         <div id="answerBlock" class="text-center col-sm-10 row-cols-1 gy-5"></div> 
                     </div>
                     <button id="btn-advance" class="btn btn-primary" style="margin-top: 12px;">
-                        Avançar
+                        Iniciar Quiz
                     </button>
                 </section>
                 <section class="col d-flex flex-column justify-content-center container-sm text-center">
