modified:   index.js 	deleted:    quiz/questions.json 	modified:   quiz/quiz.html 	modified:   quiz/quiz.js

--- a/quiz/quiz.html
+++ b/quiz/quiz.html
@@ -33,7 +33,7 @@
             <div id="game-row" class="row">
                 <section id="section" class="col-10 text-center">
                     <div class="bottom-line align-items-center" id="questionBlock">
-                        Bem vindo ao Quiz Contra a Dengue, aqui você poderá testar seus conhecimentos a respeito do mosquito Aedes Aegypti e sobre o Controle Vetorial. Clique no botão azul para iniciar o quiz.
+                        <h2>Bem vindo ao Quiz Contra a Dengue, aqui você poderá testar seus conhecimentos a respeito do mosquito Aedes Aegypti e sobre o Controle Vetorial. Clique no botão azul para iniciar o quiz.</h2>
                     </div>
                     <div class="d-flex justify-content-center">
                         <div id="answerBlock" class="text-center col-sm-10 row-cols-1 gy-5"></div> 
