--- a/checklist/checklist.html
+++ b/checklist/checklist.html
@@ -149,7 +149,7 @@
               <img src="/img/datadia-modal.png" alt="Calendário" style="max-width: 280px;">
             </div>
             <div class="modal-body">
-              <p>Escolha um dia que represente o <b>início da semana</b>. Lembre de sempre usar o <b>mesmo dia da semana</b> para todas os inícios de semana.</p> 
+              <p>Escolha um dia que represente o <b>início da semana</b>. Lembre de sempre usar o <b>mesmo dia da semana</b> para todos os inícios de semana.</p> 
               <p>Por exemplo: Se eu escolher a <b>segunda-feira</b> em uma semana, eu devo <b>sempre usar a segunda-feira</b> como início das semanas.</p>
             </div>
             <div class="modal-footer">
