--- a/quiz/quiz.html
+++ b/quiz/quiz.html
@@ -39,7 +39,7 @@
                 </section>
                 <section id="section" class="col-lg-10 text-center">
                     <div class="bottom-line align-items-center" id="questionBlock">
-                        <h2>Bem vindo ao Quiz Contra a Dengue, aqui você poderá testar seus conhecimentos a respeito do mosquito Aedes Aegypti e sobre o Controle Vetorial. Clique no botão azul para iniciar o quiz.</h2>
+                        <div><h2>Bem-vindo ao Quiz Contra a Dengue!</h2><h2>Aqui você poderá testar seus conhecimentos a respeito do mosquito Aedes Aegypti e sobre o Controle Vetorial.</h2><h2>Clique no botão azul para iniciar o quiz.</h2></div>
                     </div>
                     <div class="d-flex justify-content-center">
                         <div id="answerBlock" class="text-center col-sm-10 row-cols-1 gy-5"></div> 
