--- a/checklist/checklist.html
+++ b/checklist/checklist.html
@@ -32,7 +32,10 @@
     <div class="row g-5">
       <form id="formChecklist" action="" method="post">          
         <br>
-        <div class="table-responsive" style="margin-bottom: 3cm;">        
+        <div class="table-responsive" style="margin-bottom: 3cm;">
+          <button id="add-checklist" name="add-checklist" class="btn btn-light" type="button" data-tt="tooltip" data-bs-title="Adicionar dia">
+            <i class="bi bi-plus-circle" style="font-size: 28px;"></i>Adicionar novo dia
+          </button> 
           <table class="table table-sm" name="checklist-table" id="checklist-table" style="width: 100%;">
             <thead>
               <tr>
@@ -110,11 +113,6 @@
         </div>
         <div class="fixed-bottom">
           <div class=" row gx-5 align-items-center" id="button-bar">
-            <div class="col-auto">
-              <button id="add-checklist" name="add-checklist" class="btn btn-light" type="button" data-tt="tooltip" data-bs-title="Adicionar dia">
-                <i class="bi bi-plus-circle" style="font-size: 28px;"></i>
-              </button>
-            </div>
             <div class="col-auto">
               <button id="save-checklist-web" class="btn btn-primary" type="submit" data-tt="tooltip" data-bs-title="Salvar no navegador">
                 <i class="bi bi-floppy-fill" style="font-size: 28px;"></i>
