modified:   checklist/checklist.html

--- a/checklist/checklist.html
+++ b/checklist/checklist.html
@@ -245,7 +245,7 @@
             </div>
             <div class="modal-body">
               <p>Os pratos com água que ficam embaixo dos vasos de planta <b>devem ser evitados</b>, pois acumulam água por muito tempo.</p> 
-              <p>O prato de água pode ser substituído por <b>pratos preenchidos por areia</b> ou <b>lavados semanalmente</b> com esponja.</p>
+              <p>O prato de água pode ser substituído por <b>pratos preenchidos por areia</b> ou <b>lavados semanalmente</b> com escova.</p>
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Ok, entendi</button>
