modified:   quiz/quiz.css 	modified:   quiz/quiz.html 	modified:   quiz/quiz.js

--- a/quiz/quiz.html
+++ b/quiz/quiz.html
@@ -72,7 +72,10 @@
                     </div>
                 </section>
                 
-                <section class="correction-section mb-2"></section>
+                <section id="correction-section" hidden>
+                    <h2>Correção</h2>
+                    <div class="correction-section-grid mb-2"></div>
+                </section>
 
                 <section class="text-center container-sm">
                     <form action="/send-score" method="post">
