modified:   quiz/quiz.html

--- a/quiz/quiz.html
+++ b/quiz/quiz.html
@@ -72,9 +72,13 @@
                     </div>
                 </section>
                 
-                <section class="correction-section mb-2"></section>
+                <section id="correction-section" hidden>
+                    <h2>Correção</h2>
+                    <div class="correction-section-grid mb-2"></div>
+                </section>
 
                 <section class="text-center container-sm">
+                    <h2>Registre seus resultados</h2>
                     <form action="/send-score" method="post">
                         <div class="form-inputs">
                             <p>
